# starlite

./: .clippy.toml  .gitignore  .rustfmt.toml  Cargo.toml  HEADER  talpo.toml
.cargo/: config.toml
crates/abi/: Cargo.toml  cbindgen.toml
crates/abi/src/: assembly_info.rs  dispatch_table.rs  function_info.rs  lib.rs  module_info.rs  primitive.rs  static_type_map.rs  struct_info.rs  test_utils.rs
crates/abi/src/type/: id.rs  info.rs  lut.rs  mod.rs
