lints.workspace = true

[package]
edition.workspace = true
license.workspace = true
name = "starlite_abi"
rust-version.workspace = true
version.workspace = true

[dependencies]
extendhash = "1"
itertools = "0.14"
once_cell = "1"
parking_lot = "0.12"
serde = { workspace = true, features = ["derive"] }
serde_repr = "0.1"
